force-app/main/default/objects/TimeSheetEntry/fields/Atak_Project__c.field-meta.xml
<CustomField>
    <fullName>Atak_Project__c</fullName>
    <formula>WorkOrder.Asset.ATAK_Project__r.SubProject_ATAK__c</formula>
    <label>Atak Project</label>
    <type>Text</type>
</CustomField>