force-app/main/default/objects/TimeSheetEntry/fields/Break_Duration__c.field-meta.xml
<CustomField>
    <fullName>Break_Duration__c</fullName>
    <label>Break Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>