force-app/main/default/objects/TimeSheetEntry/fields/Break_Duration_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Break_Duration_in_Minutes__c</fullName>
    <formula>Break_Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Break Duration (in Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>