force-app/main/default/objects/TimeSheetEntry/fields/Code_ATAK_Limbus__c.field-meta.xml
<CustomField>
    <fullName>Code_ATAK_Limbus__c</fullName>
    <label>Code ATAK/Limbus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Codes_ATAK_Limbus</valueSetName>
    </valueSet>
</CustomField>