force-app/main/default/objects/TimeSheetEntry/fields/Corrected__c.field-meta.xml
<CustomField>
    <fullName>Corrected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TSE was corrected by CM or BS after submission  - added via flow</description>
    <inlineHelpText>TSE was corrected by CM or BS after submission</inlineHelpText>
    <label>Corrected</label>
    <type>Checkbox</type>
</CustomField>