force-app/main/default/objects/TimeSheetEntry/fields/Current_User_is_Manager__c.field-meta.xml
<CustomField>
    <fullName>Current_User_is_Manager__c</fullName>
    <description>Technical Field used in Report Filtering</description>
    <formula>$User.Id =  WorkOrder.ServiceTerritory.Main_Responsible__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User is Manager</label>
    <type>Checkbox</type>
</CustomField>