force-app/main/default/objects/TimeSheetEntry/fields/Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type__c</fullName>
    <description>For Reporting Purposes</description>
    <formula>TEXT( WorkOrder.ServiceContract.Contract_type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Type</label>
    <type>Text</type>
</CustomField>