force-app/main/default/objects/TimeSheetEntry/fields/Is_Kilometer_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Is_Kilometer_Allowance__c</fullName>
    <formula>TEXT(Code_ATAK_Limbus__c) = &apos;RT&apos; &amp;&amp;  WorkOrder.Has_Kilometers_Booked__c</formula>
    <label>Is Kilometer Allowance</label>
    <type>Checkbox</type>
</CustomField>