force-app/main/default/objects/TimeSheetEntry/fields/Is_Kilometer_Allowance_Entry__c.field-meta.xml
<CustomField>
    <fullName>Is_Kilometer_Allowance_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Kilometer Allowance Entry</label>
    <type>Checkbox</type>
</CustomField>