force-app/main/default/objects/TimeSheetEntry/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <formula>TimeSheet.ServiceResource.Name</formula>
    <label>Operator</label>
    <type>Text</type>
</CustomField>