force-app/main/default/objects/TimeSheetEntry/fields/Pause_Duration__c.field-meta.xml
<CustomField>
    <fullName>Pause_Duration__c</fullName>
    <label>Pause Duration (in Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>