force-app/main/default/objects/TimeSheetEntry/fields/Resource_Absence__c.field-meta.xml
<CustomField>
    <fullName>Resource_Absence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Absence</label>
    <referenceTo>ResourceAbsence</referenceTo>
    <relationshipLabel>Time Sheet Entries</relationshipLabel>
    <relationshipName>Time_Sheet_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>