force-app/main/default/objects/TimeSheetEntry/fields/Starting_Allowance_Winter_Service__c.field-meta.xml
<CustomField>
    <fullName>Starting_Allowance_Winter_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Starting Allowance (Winter Service)</label>
    <type>Checkbox</type>
</CustomField>