force-app/main/default/objects/TimeSheetEntry/fields/Total_Hours_Minus_Breaks__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Minus_Breaks__c</fullName>
    <formula>(DurationInMinutes -  Break_Duration_in_Minutes__c)/60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours Minus Breaks</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>