force-app/main/default/objects/TimeSheetEntry/fields/Total_Hours_Minus_Breaks_and_Pauses__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Minus_Breaks_and_Pauses__c</fullName>
    <formula>ROUND(ROUND((DurationInMinutes - Pause_Duration__c - Break_Duration_in_Minutes__c)/5,0)*5,0)/60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours Minus Breaks and Pauses</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>