force-app/main/default/objects/TimeSheetEntry/fields/Total_Hours_Minus_Pauses__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Minus_Pauses__c</fullName>
    <formula>(DurationInMinutes -  Pause_Duration__c) /60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours Minus Pauses</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>