force-app/main/default/objects/TimeSheetEntry/fields/Urgent_Intervention__c.field-meta.xml
<CustomField>
    <fullName>Urgent_Intervention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Urgent Intervention</label>
    <type>Checkbox</type>
</CustomField>