force-app/main/default/objects/TimeSheetEntry/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <formula>WorkOrder.WorkType.Name</formula>
    <label>Work Type</label>
    <type>Text</type>
</CustomField>