force-app/main/default/objects/TimeSheetEntry/fields/Working_Time__c.field-meta.xml
<CustomField>
    <fullName>Working_Time__c</fullName>
    <label>Working Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>